Minor changes Changed path check to make compatible with JDK 8. Moved test files to correct folder. Deleted yacc.exe